<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pink" >
	   <LinearLayout 
	    android:id="@+id/activity_main_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/activity_main_title" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="left"
            android:layout_marginRight="10dp"
            android:text="@string/activity_main_title"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold" />
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_gravity="right"
		    android:background="@drawable/corner_pink"
		    android:layout_marginRight="5dp"
		    android:orientation="vertical" >
		    <TextView
		        android:id="@+id/activity_main_score"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:text="@string/activity_main_score"
		        android:textSize="15sp"
		        android:textColor="@color/pink"
		        android:textStyle="bold" />
		    <TextView
		        android:id="@+id/activity_main_scores"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:text="@string/zero"
		        android:textSize="15sp"
		        android:textColor="@color/pink"
		        android:textStyle="bold" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_gravity="right"
		    android:background="@drawable/corner_pink"
		    android:layout_marginLeft="5dp"
		    android:orientation="vertical" >
		    <TextView
		        android:id="@+id/activity_main_best"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:text="@string/activity_main_best"
		        android:textSize="15sp"
		        android:textColor="@color/pink"
		        android:textStyle="bold" />
		    <TextView
		        android:id="@+id/activity_main_bests"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:text="@string/zero"
		        android:textSize="15sp"
		        android:textColor="@color/pink"
		        android:textStyle="bold" />
		</LinearLayout>
    </LinearLayout>
    <GridView 
        android:id="@+id/activity_main_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center_horizontal"
        android:scrollbars="none" />
    <LinearLayout 
        android:id="@+id/activity_main_ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_ll1"
        android:orientation="horizontal" >
		<TextView
		    android:id="@+id/activity_main_annoncement"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_gravity="center_vertical"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="5dp"
		    android:gravity="center_vertical"
		    android:text="@string/activity_main_annoncement"
		    android:textSize="20sp"
		    android:textColor="@color/white" />
    	<Button
    	    android:id="@+id/activity_main_start"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_gravity="center_vertical"
        	android:layout_marginRight="10dp"
        	android:layout_marginLeft="5dp"
        	android:background="@drawable/button_start"
        	android:text="@string/activity_main_restart"
        	android:textSize="20sp"
        	android:textColor="@color/white"
        	android:gravity="center" />
    </LinearLayout>
</RelativeLayout>
